Adicionando 2 apis nos enviroments

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BRASIL_API="https://brasilapi.com.br/api/ibge/municipios/v1/"
+IBGE="https://servicodados.ibge.gov.br/api/v1/localidades/estados/"
